# driver-app

./: .env.example  .gitignore  DEPLOYMENT_HANDOFF.md  README.md  app.py  config.py  main.py  pdf_generator.py  pr_description.md  precommit_script.py  pyproject.toml  requirements.txt  runtime_context.py  state.py  submission.patch  submission_storage.py
.streamlit/: config.toml  secrets.toml.example
app_sections/: __init__.py  company_questions.py  personal_info.py  remaining_pages.py  review_submit.py
docs/: ADMIN_AUTH.md  DISPATCH_BOARD_WEB_UI.md  PROJECT_MAP.md  drop-trailers-incremental-gps.md  gps-matching-audit-and-plan.md  inactive-gps-provider-units.md
qbo/: __init__.py  api_client.py  catalog.py  company_directory.py  duplicate_check.py  file_loader.py  import_service.py  lookups.py  models.py  money_code_batches.py  parking_pk.py  shop_attachment_sync.py  shop_customer_sync.py  shop_inventory_adjustment_sync.py  shop_inventory_sync.py  shop_invoice_attachments.py  shop_invoice_history_sync.py  shop_invoices.py  shop_purchase_history_sync.py  utils.py
scripts/: __init__.py  analyze_rate_conf_board_matches.py  backfill_anytrek_history.py  build_asset_hour_tracks.py  cleanup_legacy_gps.py  compute_pair_hourly_evidence.py  compute_pairings.py  compute_trailer_drop_events.py  copy_submission_company.py  finalize_hourly_evidence_job.py  gen_draft_pdf.py  ingest_rate_confirmations.py  ingest_safety_replies.py  pair_hourly_history.py  probe_gps_provider_apis.py  report_gps_last_known_locations.py  sample_rate_conf_inbox.py  sync_gps_provider_units.py  (+1 more)
(+112 files in other folders)
