[project]
name = "prestige-driver-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.7",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
