[project]
name = "prestige-driver-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.7",
    "google-auth>=2.29.0",
    "gspread>=6.0.0",
    "pypdf>=4.3.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
