[project]
name = "prestige-driver-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "Authlib>=1.3.2",
    "fpdf2>=2.8.7",
    "google-auth>=2.29.0",
    "gspread>=6.0.0",
    "openpyxl>=3.1.2",
    "pypdf>=4.3.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "streamlit>=1.56.0",
    "streamlit-aggrid>=1.2.1.post2",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
